@@ -215,3 +215,4 @@
   9-Feb-2020  V0.962 Cleanup combined software program list, separate tests to detect schema differences, add support for
                      schema updates to existing collections, update schema update CLI with compare methods.
  11-Feb-2020  V0.963 Expose upsertFlag on mongo update method wrapper.
+ 12-Feb-2020  V0.964 Extend entity and entity instance annotations with convalent linkage details
